--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+/* Adjusting logo */
+.gdbar img {
+  width: 150px !important;
+  height: 150px !important;
+  margin: 8px 8px;
+}
+
+.gdbar {
+  width: 400px !important;
+  height: 170px !important;
+}
+
+
+slides > slide:not(.nobackground):before {
+  width: 75px;
+  height: 75px;
+  background-size: 75px 75px;
+}
+
+
 .wrapper {
   text-align: center;
 }
@@ -32,7 +52,6 @@ p {
   font-size: 1.25rem;
   font-style: italic;
   text-align: left;
-  color: green;
 }
 @media (max-width: 600px) {
   blockquote::after {
