--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@
 }
 
 
+/* unordered list styles */
+ ul  {
+    font-size: 50px;
+    list-style-type: square;
+}
+
 slides > slide:not(.nobackground):before {
   width: 50px;
   height: 50px;
